fix (2331): scrollbar height issue

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -102,7 +102,7 @@ $s-phone: 320px;
   &::-webkit-scrollbar {
     width: 4px;
     border-radius: 4px;
-    height: 8px;
+    height: 4px;
     background-color: var(--surfaceTrasparent); /* or add it to the track */
   }
 
